force-app/main/default/objects/GTM_Offering__mdt/GTM_Offering__mdt.object-meta.xml
<CustomObject>
    <label>GTM Offering</label>
    <pluralLabel>GTM Offerings</pluralLabel>
    <description>One row per offering (currently just Migration Accelerator). Holds the revenue targets used as a default Opportunity Amount when an assessment auto-creates one and the rep hasn't set an Estimated Value on the Engagement Link.</description>
</CustomObject>