force-app/main/default/objects/GTM_Offering__mdt/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <label>Annual Target</label>
    <description>Used as the default Amount on an auto-created Opportunity when the Engagement Link has no Estimated Value set.</description>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>