force-app/main/default/objects/GTM_Offering__mdt/fields/CMS_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>CMS_Channel_Id__c</fullName>
    <label>CMS Channel Id</label>
    <description>The CMS Delivery Channel this offering's story content is published through (see MaStoryContentController). Org-specific -- created per org via scripts/setup-cms-workspace.sh, not something a metadata deploy can populate. Blank until that script has run and this value is set by hand.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>