force-app/main/default/objects/GTM_Offering__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <description>Human-readable name used when auto-creating an Opportunity (e.g. "Migration Accelerator"), since Offering_Key__c is a URL-safe slug.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>