force-app/main/default/objects/GTM_Offering__mdt/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <label>Monthly Target</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>