force-app/main/default/objects/GTM_Offering__mdt/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Matches the OFFERING constant in maConfigData.js (e.g. "migration-accelerator"). Not the DeveloperName, since that can't contain hyphens.</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>